--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,16 +5,33 @@ set -g default-terminal 'screen-256color'
 # enable RubyMotion http://goo.gl/WDlCy
 set -g default-command 'reattach-to-user-namespace -l zsh'
 
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# mouse-mode based on Dr. Bunsen
+set -g mode-mouse on
+setw -g mouse-select-window on
+setw -g mouse-select-pane on
 
-# act like GNU screen
+# act like vim, from thoughtbot
+# setw -g mode-keys vi
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+# bind-key -r C-h select-window -t :-
+# bind-key -r C-l select-window -t :+
+
+# from Dr. Bunsen
+# Copy mode
+setw -g mode-keys vi
+bind ` copy-mode
+unbind [
+unbind p
+bind p paste-buffer
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy Escape cancel
+bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# act like GNU screen, prefix=CTRL+A
 unbind C-b
 set -g prefix C-a
 
@@ -31,3 +48,22 @@ set -g status-fg '#aaaaaa'
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
+
+# sets status bar based on Dr. Bunsen's setup, requires vim-powerline
+set -g status-left-length 52
+set -g status-right-length 451
+set -g status-fg white
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S
+#[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami)
+#[fg=colour238,bg=colour234,nobold]⮀'
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format
+"#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W
+#[fg=colour39,bg=colour234,nobold]⮀"
