--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,7 +16,7 @@ setw -g mouse-select-pane on
 # bind j select-pane -D
 # bind k select-pane -U
 # bind l select-pane -R
-# bind-key -r C-h select-window -t :-
+# bind-key -r C-h select-window -
 # bind-key -r C-l select-window -t :+
 
 # from Dr. Bunsen
@@ -42,28 +42,21 @@ set -g base-index 1
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+# set -g status-bg '#666666'
+# set -g status-fg '#aaaaaa'
+set -g status-fg white
+set -g status-bg colour234
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
 
-# sets status bar based on Dr. Bunsen's setup, requires vim-powerline
+# customize status bar ala Dr. Bunsen
 set -g status-left-length 52
 set -g status-right-length 451
-set -g status-fg white
-set -g status-bg colour234
 set -g window-status-activity-attr bold
 set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
+set -g pane-active-border-fg '#0698b9'
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S
-#[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami)
-#[fg=colour238,bg=colour234,nobold]⮀'
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format
-"#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W
-#[fg=colour39,bg=colour234,nobold]⮀"
