--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -11,17 +11,16 @@ setw -g mouse-select-window on
 setw -g mouse-select-pane on
 
 # act like vim, from thoughtbot
-# setw -g mode-keys vi
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-# bind-key -r C-h select-window -
-# bind-key -r C-l select-window -t :+
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
 # from Dr. Bunsen
 # Copy mode
-setw -g mode-keys vi
 bind ` copy-mode
 unbind [
 unbind p
@@ -32,8 +31,12 @@ bind -t vi-copy Escape cancel
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # act like GNU screen, prefix=CTRL+A
-unbind C-b
-set -g prefix C-a
+# unbind C-b
+# set -g prefix C-a
+
+# quick pane cycling
+unbind ^B
+bind ^B select-pane -t :.+
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -60,3 +63,7 @@ set -g pane-active-border-fg '#0698b9'
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
+
+setw -g automatic-rename
+set -g status-left '#(whoami)@#(hostname -s)'
+set -g status-right '#(cut -d " " -f 1-3 /proc/loadavg) %y-%m-%d %H:%M'
